packages/errors/test/__snapshots__/CDP_RETRYING_CONNECTION.ansi
[31mStill waiting to connect to Chrome, retrying in 1 second [90m(attempt 1/62)[39m[31m[39m